@@ -1,3 +1,10 @@
+2006-02-12  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-session.c: (save_yourself_cb):
+
+	Reqeust interaction with the client when there are
+	unfinished downloads.
+
 2006-02-10  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* src/bookmarks/ephy-bookmarks-menu.c
